--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^2.16.0
-  firebase_auth: ^4.10.0
-  cloud_firestore: ^4.9.2
-  # The following adds the Cupertino Icons font to your application.
+  firebase_core: ^2.17.0
+  firebase_auth: ^4.10.1
+  cloud_firestore: ^4.9.3
+  image_picker: ^1.0.4
+       # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
