--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^4.10.1
   cloud_firestore: ^4.9.3
   image_picker: ^1.0.4
+  firebase_storage: ^11.2.8
        # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
